<resources>
    <string name="app_name">SpiderIndia</string>
    <string name="tmmt_com">tmmt.com</string>
    <string name="msg_please_enter_your_mobile_number">msg_please_enter_your_mobile_number</string>
    <string name="send">send</string>
    <string name="str_terms_and_conditions">str_terms_and_conditions</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="go">Go</string>
    <string name="go_restaurant">Go Restaurant</string>
    <string name="open_24_hours">Open 24 hours</string>
    <string name="country_code">country code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="your_name">Your Name</string>
    <string name="email_id">Email Id</string>
    <string name="sign_up">Sign Up</string>
    <string name="refferel_code_optional">Refferel code optional</string>
    <string name="register_new_user">Register New User</string>
    <string name="address">Address</string>
    <string name="address_note">Address Note</string>
    <string name="_966">+966</string>
    <string name="beta_user">beta user</string>
    <string name="hello">Hello</string>
    <string name="_54xxxxxxxxx">54XXXXXXXXX</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="create_new_account">Create New Account?</string>
    <string name="_966_54xxxxxxxx">966–54XXXXXXXX</string>
    <string name="already_have_account">Already have account?</string>
    <string name="title_activity_home_aactivity">HomeAactivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="spice_chicken">Spice chicken</string>
    <string name="_25_sr">25 SR</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_1">1</string>
    <string name="quantity_less">-</string>
    <string name="quantity_high">+</string>
    <string name="logout">Logout</string>
    <string name="test_restaurant">Test Restaurant</string>
    <string name="open_10_00_am">Open-10:00 AM</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="order_placed">Order Placed</string>
    <string name="captain_not_available">Captain Not Available</string>
    <string name="done">Done</string>
    <string name="sign_in">SIGN IN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="phone_no">Phone No</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="add_student">Add Student</string>
    <string name="view_student">View Student</string>
    <string name="view_location">View Location</string>
    <string name="name">Name</string>
    <string name="section">Section</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dd_mm_yyyy"> DOB : DD/MM/YYYY</string>
    <string name="blood_group"> Blood Group</string>
    <string name="father_s_name"> Father\'s Name</string>
    <string name="mother_s_name"> Mother\'s Name</string>
    <string name="parent_s_contact_no"> Parent\'s Contact No</string>
    <string name="address_1"> Address 1</string>
    <string name="address_2"> Address 2</string>
    <string name="city"> City</string>
    <string name="state"> State</string>
    <string name="zip"> Zip</string>
    <string name="emergency_contact_no"> Emergency Contact No</string>
    <string name="add_location"> Add Location :</string>
    <string name="title_activity_maps">Map</string>
    <string name="class_name">Class No</string>
    <string name="school_name">School Name</string>
    <string name="nameDummy">NameDummy</string>
    <string name="standard">standard</string>
    <string name="school_nameDummy">School Name</string>
    <string name="arrow"><![CDATA[->]]></string>
    <string name="title_activity_save_location_map">Map</string>
    <string name="dateOfBirth">--/--/----</string>
    <string name="title_activity_maps2">Map</string>
    <string name="get_location">Get Location</string>
    <string name="save_location">save location</string>
    <string name="save">SAVE</string>


</resources>