<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1F5FE"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:orientation="horizontal"
        android:background="#283593">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/final_login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:id="@+id/login_layout"
        android:visibility="visible"
        >


        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/black"
            android:orientation="vertical"
            app:cardCornerRadius="10sp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B3E5FC"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/black"
                    android:textColorLink="@android:color/holo_blue_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/name_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/user_name"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/btn_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10sp"
                    android:text="@string/create_new_account"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    android:background="@color/tmmt_yellow"
                    android:text="@string/login" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:visibility="gone"

        >


        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/black"
            android:orientation="vertical"
            app:cardCornerRadius="10sp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B3E5FC"
                android:gravity="center"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/uiIvLogo"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:text="SIGN UP"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/user_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:hint="@string/user_name"
                     />


                <EditText
                    android:id="@+id/number_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="phone"
                    android:hint="@string/phone_no"
                    android:maxLines="1" />


                <EditText
                    android:id="@+id/signUp_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:maxLines="2" />


                <EditText
                    android:id="@+id/signUp_confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginTop="20dp"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:maxLines="4" />

                <TextView
                    android:id="@+id/btn_already_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10sp"
                    android:text="@string/already_have_account"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/btn_SignUp"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/rounded_corners"
                    android:text="@string/sign_up"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>