<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:cardCornerRadius="15dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B3E5FC"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/person_image"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_radius" />

            <TextView
                android:id="@+id/person_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="false"
                android:layout_marginStart="130dp"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/name_standard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="50dp"
                android:text="@string/standard"
                android:textColor="#FF018786"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/school_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="70dp"
                android:maxLines="3"
                android:text="@string/school_name"
                android:textColor="#FF018786"
                android:textSize="15sp" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_mapview"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="false"
                android:layout_marginStart="275dp"
                android:backgroundTint="#039BE5"
                android:layout_marginTop="30dp"
                android:foregroundGravity="center"
                app:srcCompat="@android:drawable/ic_menu_directions"
               />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>