<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="442dp"
            android:layout_height="match_parent"
            android:alpha="0.85"
            app:srcCompat="@drawable/layer_home" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="200dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/login_layout"
            android:layout_width="90dp"
            android:layout_height="170dp"
            android:layout_margin="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="16dp"
            android:background="#B3E5FC"
            android:orientation="vertical"
            app:cardCornerRadius="25sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B3E5FC"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_student"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#039BE5"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@android:drawable/ic_menu_add" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lines="2"
                    android:text="@string/add_student"
                    android:textAlignment="center"
                    android:textColor="#01579B"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="170dp"
            android:layout_margin="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="16dp"
            android:background="#B3E5FC"
            android:orientation="vertical"
            app:cardCornerRadius="25sp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B3E5FC"
                android:gravity="center"
                android:orientation="vertical">


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/view_student"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#039BE5"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/images" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lines="2"
                    android:text="@string/view_student"
                    android:textAlignment="center"
                    android:textColor="#01579B"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="170dp"
            android:layout_margin="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="16dp"
            android:background="#B3E5FC"
            android:orientation="vertical"
            app:cardCornerRadius="25sp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B3E5FC"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/view_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#039BE5"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@android:drawable/ic_menu_mylocation" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:lines="2"
                    android:text="@string/view_location"
                    android:textAlignment="center"
                    android:textColor="#01579B"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_marginTop="425dp"
        android:gravity="bottom">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:alpha="0.2"
            app:srcCompat="@drawable/student_database"

            />
    </LinearLayout>
</RelativeLayout>